--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
+    <link rel="stylesheet" href="pages/index.css">
 </head>
-<body>
-    <div class="page"></div>
+<body class="page">
+    <header class="header">
+        <img class="header__logo" src="images/logo.svg" alt="Россия">
+        <a class="header__lang-link" href="#">Ru</a>
+        <a class="header__lang-link" href="#">En</a>
+    </header>
 </body>
 </html>
