--- a/index.html
+++ b/index.html
@@ -13,5 +13,22 @@
         <a class="header__lang-link" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
     </header>
+
+    <main>
+        <div class="lead">
+            <h1 class="lead__title">Путешествия по России</h1>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+
+            <figure class="lead__image-wrap">
+                <picture>
+                    <source srcset="images/lead-image.jpg" media="(min-width: 1280px)">
+                    <source srcset="images/lead-image-1024.jpg" media="(min-width: 1024px)">
+                    <source srcset="images/lead-image-768.jpg" media="(min-width: 768px)">
+                    <img class="lead__image" src="images/lead-image-320.jpg" alt="Путешествия по России">
+                </picture>
+                <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+            </figure>
+        </div>
+    </main>
 </body>
 </html>
