--- a/index.html
+++ b/index.html
@@ -61,6 +61,56 @@
                 </div>
             </dl>
         </div>
+
+        <ul class="photo-grid">
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-01.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-02.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-03.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-04.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-05.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-06.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-07.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-08.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-09.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-10.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-11.jpg" alt="Фото">
+            </li>
+
+            <li>
+                <img class="photo-grid__item" src="images/photo-grid-12.jpg" alt="Фото">
+            </li>
+        </ul>
     </main>
 </body>
 </html>
