--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
                 </div>
             </li>
         </ul>
+
+        <div class="cover">
+            <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank"></a>
+        </div>
     </main>
 </body>
 </html>
