--- a/index.html
+++ b/index.html
@@ -194,5 +194,17 @@
             <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank"></a>
         </div>
     </main>
+
+    <footer class="footer">
+        <ul class="footer__links">
+            <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+            <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+            <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+            <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+            <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+        </ul>
+
+        <p class="footer__copyright">© 2020. Погорелова Анна</p>
+    </footer>
 </body>
 </html>
